--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-        <meta name="description" content="私が飲みに行った事のあるお勧めのお店の共有サイトです。個人店を中心に紹介できればと思ってます。">
-        <title>Home｜酒場リンク</title>
-        <link rel="stylesheet" type="text/css" href="/main.css">
+        <meta name="description" content="Checks the availability of Google Pay.">
+        <title>Google Pay Checker</title>
+        <script src="https://pay.google.com/gp/p/js/pay.js"></script>
     </head>
     <body class="body">
         <div id="root"></div>
